# bwi_planning

./: README.md
bwi_planning/: CHANGELOG.rst  CMakeLists.txt  package.xml  result  setup.py
bwi_planning/config/: kitchen_delay.yaml
bwi_planning/domain/: cost  example  experiment  nav  nav2
bwi_planning/examples/: distances.lua  initial  query  query_incomplete
bwi_planning/experiment/: distances.lua  initial  initial.in  query  query.in  query_incomplete  query_no_heuristics
bwi_planning/include/bwi_planning/: cost_learner.h
bwi_planning/launch/: cost_learner_krr2014.launch  environment_krr2014.launch  example_costs_krr2014.launch  example_incomplete_krr2014.launch  example_krr2014.launch  experiment_incomplete_krr2014.launch  experiment_krr2014.launch  experiment_no_costs_krr2014.launch  planner_krr2014.launch
bwi_planning/scripts/: experiment_runner  experiment_runner_krr2014  planner_krr2014  process_data_krr2014  reset_experiment  reset_experiment_krr2014
bwi_planning/src/bwi_planning/: __init__.py  action_executor.py  action_executor_krr2014.py  atom.py  atom_krr2014.py  clingo.py  planner.py  planner_krr2014.py
bwi_planning/src/libbwi_planning/: cost_learner.cpp
bwi_planning/src/nodes/: cost_learner.cpp
bwi_planning_common/: CHANGELOG.rst  CMakeLists.txt  package.xml
bwi_planning_common/include/bwi_planning_common/: structures.h
bwi_planning_common/launch/: mark_doors.launch  mark_locations.launch
bwi_planning_common/src/: mark_doors.cpp  mark_locations.cpp  structures.cpp
bwi_planning_icaps14/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
bwi_planning_icaps14/example/: navbc
bwi_planning_icaps14/scripts/: planner_icaps2014
bwi_planning_icaps14/src/bwi_planning_icaps14/: __init__.py  action_executor_icaps2014.py  atom_krr2014.py  planner_icaps2014.py
clasp/: CHANGELOG.rst  CHANGES  CMakeLists.txt  package.xml
clasp/libclasp/clasp/: clasp_facade.h  clause.h  enumerator.h  minimize_constraint.h  parallel_solve.h  program_rule.h  shared_context.h
clasp/libclasp/clasp/util/: mutex.h
clasp/libclasp/src/: cb_enumerator.cpp  clause.cpp  parallel_solve.cpp  program_rule.cpp  shared_context.cpp  solver.cpp  weight_constraint.cpp
clasp/tools/: clang.patch
planner_krr14/: package.xml
planner_krr14/scripts/: planner_cost
segbot_logical_translator_gui/: CMakeLists.txt  package.xml
segbot_logical_translator_gui/icapsExp/: planner_cost.py  process_data.py
segbot_logical_translator_gui/icapsExpRobot/: planner_cost.py  process_data.py
segbot_logical_translator_gui/include/segbot_logical_translator_gui/: main_window.hpp  qnode.hpp
segbot_logical_translator_gui/launch/: clingo_interface.launch  clingo_interface_real.launch  icaps_exp.launch  sym_exp.launch
segbot_logical_translator_gui/scripts/: interface_request.py  planner.py  planner_cost.bk  planner_cost.py  planner_costlocal.py  plannerlocal.py
segbot_logical_translator_gui/src/: .gitignore  main.cpp  main_window.cpp  qnode.cpp
segbot_logical_translator_gui/symExp/: planner_cost.py
