<?xml version="1.0"?>
<package>
  <name>bwi_planning</name>
  <version>0.0.0</version>
  <description>The planner_krr14 package</description>

  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/bwi_planning</url>
  <url type="repository">https://github.com/utexas-bwi/segbot.git</url>
  <url type="bugtracker">https://github.com/utexas-bwi/segbot/issues</url>

  <author email="piyushk@gmail.com">Piyush Khandelwal</author>
  <author>Fangkai Yang</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>bwi_planning_common</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslaunch</build_depend> <!-- unit test only -->
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>bwi_planning_common</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>clasp</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>

  <!-- launch only dependencies -->
  <run_depend>segbot_gazebo</run_depend>
  <run_depend>segbot_gui</run_depend>
  <run_depend>segbot_logical_translator</run_depend>
  <run_depend>segbot_navigation</run_depend>
  <run_depend>segbot_simulation_apps</run_depend>
  <run_depend>utexas_gdc</run_depend>

</package>
