<package>
  <name>segbot_logical_translator_gui</name>
  <version>0.0.1</version>
  <description>segbot_logical_translator_gui</description>

  <license>BSD</license>

  <author>Piyush Khandelwal</author>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>bwi_mapper</build_depend>
  <build_depend>segbot_logical_translator</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>qt4</build_depend>

  <run_depend>bwi_mapper</run_depend>
  <run_depend>segbot_logical_translator</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>qt4</run_depend>

</package>
